Message area made full width so there are more space for your prompt. Action buttons are now placed below the message area. Fixed automatic message area collapse when send button is clicked or Enter is pressed. Fixed wrap for long strings with no whitespace or delimiters.

--- a/src/index.css
+++ b/src/index.css
@@ -652,8 +652,8 @@ html, body {
     border-radius: 40px;
     bottom: 0;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: end;
     padding: 12px;
 }
 
@@ -665,8 +665,8 @@ html, body {
     border-radius: 40px;
     bottom: 0;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: end;
     padding: 12px;
     width: 80%;
     transition: .2s;
@@ -680,20 +680,18 @@ html, body {
     border-radius: 40px;
     bottom: 0;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: end;
     padding: 12px;
     transition: .2s;
 }
 
 .chat-textarea {
-    width: calc(100% - 184px);
-    max-width: calc(100% - 184px);
-    min-width: calc(100% - 184px);
+    width: calc(100% - 8px);
+    max-width: calc(100% - 8px);
+    min-width: calc(100% - 8px);
     height: 16px;
-    border-radius: 48px;
-    padding: 16px;
-    margin-right: 12px;
+    padding: 12px 4px;
     min-height: 16px;
     outline: none;
     border: none;
@@ -743,6 +741,8 @@ html, body {
     color: rgba(255, 255, 255, 0.8);
     white-space: pre-wrap;
     font-size: 17px;
+    overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 .message-icon {
@@ -853,28 +853,28 @@ html, body {
 }
 
 .chat-history-mob {
-    height: calc(100vh - 100px);
+    height: calc(100vh - 130px);
     overflow-x: hidden;
     overflow-y: scroll;
     width: calc(100vw - 24px);
 }
 
 .chat-history {
-    height: calc(100vh - 100px);
+    height: calc(100vh - 130px);
     overflow-x: hidden;
     overflow-y: auto;
 }
 
 .chat-history-assistant {
     margin-top: 72px;
-    height: calc(100vh - 204px);
+    height: calc(100vh - 248px);
     overflow-x: hidden;
     overflow-y: auto;
 }
 
 .chat-history-assistant-embedded {
     margin-top: 72px;
-    height: calc(100vh - 158px);
+    height: calc(100vh - 200px);
     overflow-x: hidden;
     overflow-y: auto;
 }
